# advent_of_code

./: .gitignore  pyproject.toml
2021/clojure/: puzzle01.clj  puzzle03.clj  puzzle09.clj  puzzle10.clj  puzzle11.clj  puzzle12.clj  puzzle13.clj  puzzle14.clj  puzzle2.clj  puzzle7.clj
2021/nim/: puzzle07.nim  puzzle08.nim  puzzle19.nim
2021/python/: puzzle09.py  puzzle10.py  puzzle11.py  puzzle12.py  puzzle13.py  puzzle14.py  puzzle15.py  puzzle16.py  puzzle17.py  puzzle18.py  pyproject.toml
babashka/: 2021_day01.clj  2021_day02.clj  2021_day09.clj  2021_day12.clj  2021_day13.clj  2021_day14.clj
clojure/: 2021_day03.clj  deps.edn
clojure/.clj-kondo/.cache/v1/clj/: advent-of-code.transit.json  puzzle07.transit.json
clojure/.lsp/.cache/: db.transit.json
clojure/src/: aocd.clj  day1.clj
lua/: 2023_day01.lua  2024_day01.lua  2024_day02.lua  2024_day03.lua  2024_day04.lua  2024_day05.lua  2024_day06.lua  2024_day07.lua  2024_day08.lua  util.lua
nim/: 2021_day07.nim  2021_day08.nim
python/: 2021_day09.py  2021_day10.py  2021_day11.py  2021_day12.py  2021_day13.py  2021_day14.py  2021_day15.py  2021_day16.py  2021_day17.py  2021_day18.py  2022_day01.py  2022_day02.py
rust/: Cargo.toml
