[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Pascal Hertrich <fenlair@outlook.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
ipython = "^7.30.1"
anytree = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
